admission-controller/opa-policies/18-block-automount-sa-token-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockAutomountToken
metadata:
  name: block-automount-serviceaccount-token
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet"]
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
